--- a/angular.json
+++ b/angular.json
@@ -11,8 +11,11 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-builders/custom-webpack:browser",
           "options": {
+            "customWebpackConfig": {
+              "path": "custom-webpack.config.js"
+            },
             "outputPath": "dist/todo",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -114,6 +117,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "todo"
 }
